[gd_scene load_steps=5 format=1]

[ext_resource path="res://shared/fonts/railway.fnt" type="Font" id=1]
[ext_resource path="res://main/buttons/btn_upgrade.gd" type="Script" id=2]
[ext_resource path="res://towers/drop_upgrade/drop_upgrade.tscn" type="PackedScene" id=3]
[ext_resource path="res://towers/drop_upgrade/drop_upgrade.png" type="Texture" id=4]

[node name="btn_upgrade" type="Button"]

margin/right = 128.0
margin/bottom = 64.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
text = "Upgrade"
flat = false
align = 2
script/script = ExtResource( 2 )
__meta__ = { "__editor_plugin_screen__":"Script" }
upgrade_scene = ExtResource( 3 )

[node name="icon" type="Sprite" parent="."]

transform/pos = Vector2( 24, 32 )
texture = ExtResource( 4 )
hframes = 5
frame = 2

[connection signal="pressed" from="." to="." method="_on_btn_tower_pressed"]

[connection signal="mouse_enter" from="." to="." method="_on_btn_tower_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_btn_tower_mouse_exit"]


